fixed problem with resizing on smaller browser window.

--- a/css/main.css
+++ b/css/main.css
@@ -141,7 +141,7 @@ button.mc {
 }
 
 table{
-    table-layout:fixed;
+    table-layout:initial;
 }
 
 tr td {
